# Hospital_Management_System

./: CMakeLists.txt  CityGraph.cpp  CityGraph.h  Clinics.cpp  Clinics.h  CustomHeap.cpp  CustomHeap.h  CustomPriorityQueue.cpp  CustomPriorityQueue.h  DatabaseManager.cpp  DatabaseManager.h  Date.cpp  Date.h  Diagnosis.cpp  Diagnosis.h  Doctor.cpp  Doctor.h  Functionalities.cpp  Functionalities.h  MaxHeap.cpp  MaxHeap.h  Patient.cpp  Patient.h  Person.cpp  Person.h  PriorityQueue.cpp  PriorityQueue.h  README.md  Trie.cpp  Trie.h  gui.cpp  gui.h  main.cpp
